# safe-config-service

./: .coveragerc  .dev.env  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE_HEADER.txt  NOTICE.md  README.md  cloudbuild.yaml  docker-compose.override.yml.ci  docker-compose.override.yml.example  docker-compose.yml  docker-entrypoint.sh  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run
.codebuild/: docker-build.sh  docker-push.sh  nginx.conf
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: _build-image.yml  _ci-python.yml  _deploy.yml  _release.yml  akeyless-grafana-access-policy-producer.yaml  cla.yml  claude-code-review.yml  container-cicd.yaml  cron.pentest.yml  docker-build-push-patrick-test.yml  docker-build-push.yaml  docker-build-push.yml  helm-build-test.yml  patrick-new-container-cicd.yaml  production.yml  publish-staging.yml  publish-tag.yml  pull-request.yml  python.yml  release-please.yml  release.yml  staging.yml  test-chart.yml  test.yml
charts/safe-config/: Chart.yaml  values.yaml
charts/safe-config-service/: README.md
charts/safe-config-service/templates/: NOTES.txt  _helpers.tpl  configmap-nginx.yaml  configmap.yaml  deployment.yaml  secret-postgres.yaml  service.yaml
charts/safe-config/templates/: ingress.yaml  rbac.yaml  secret-config.yaml
docs/: remote-config.md
helm-chart/: Chart.yaml  README.md  values-test.yaml  values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm-chart/templates/tests/: test-connection.yaml
nginx/: nginx.conf
nginx/templates/: nginx.conf.template
safe_client_config_service/: manage.py
safe_client_config_service/apps/: models.py  serializers.py  urls.py  views.py
safe_client_config_service/apps/migrations/: 0001_initial.py
safe_client_config_service/apps/tests/: test_views.py
safe_client_config_service/safe_client_config_service/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: autodeploy.sh  build-and-push-helm-chart.sh
signatures/version1/: cla.json
src/: apm.py  conftest.py  manage.py  version.py
src/about/: apps.py  urls.py  views.py
src/about/tests/: test_views.py
src/apps/: serializers.py  urls.py
src/chains/: admin.py  admin_views.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  urls_v2.py  views.py
src/clients/: safe_client_gateway.py
src/config/: asgi.py  gunicorn.py  middleware.py  settings.py  swagger_info.py  urls.py  wsgi.py
src/safe_apps/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
(+164 files in other folders)
