[tool.poetry]
name = "safe-config-service"
version = "0.1.0"
description = ""
authors = ["fmrsabino <3332770+fmrsabino@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2"
djangorestframework = "3.12.4"
gunicorn = "20.1.0"
psycopg2-binary = "2.8.6"

[tool.poetry.dev-dependencies]
pytest-django = "4.2.0"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
