[project]
name = "safe-config-service"
version = "2.98.0" # Not used, injected from git tags in the docker image
requires-python = ">=3.14"
dependencies = [
    "boto3==1.43.6",
    "ddtrace==4.10.5",
    "django-cors-headers==4.9.0",
    "django-storages==1.14.6",
    "django-stubs-ext==6.0.6",
    "django==6.0.6",
    "djangorestframework-camel-case==1.4.2",
    "djangorestframework==3.17.1",
    "drf-yasg[validation]==1.21.15",
    "eth-typing==6.0.0",
    "eth-utils==6.0.0",
    "gunicorn==26.0.0",
    "pillow==12.2.0",
    "psycopg[binary]==3.3.4",
    "requests==2.34.2",
    "safe-eth-py[django]==7.21.0",
]

[dependency-groups]
dev = [
    "coverage",
    "django-stubs",
    "djangorestframework-stubs",
    "factory-boy",
    "faker",
    "mypy",
    "pre-commit",
    "pytest-django",
    "responses",
    "types-requests",
]

[tool.uv]
package = false
# Prevent supply chain attacks by excluding packages published in the last 7 days
exclude-newer = "7 days"
exclude-newer-package = { safe-eth-py = false }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
